--- a/.doc_gen/metadata/dynamodb_metadata.yaml
+++ b/.doc_gen/metadata/dynamodb_metadata.yaml
@@ -260,6 +260,7 @@ dynamodb_BatchGetItem:
           excerpts:
             - description:
               snippet_tags:
+                - ddb.swift.batchgetitem.batchget
                 - ddb.swift.import
     Bash:
       versions:
