--- a/.github/workflows/lint-python.yml
+++ b/.github/workflows/lint-python.yml
@@ -6,7 +6,7 @@ on:  # yamllint disable-line rule:truthy
 
 jobs:
   black:
-    name: Flake8 Linting & Black Formatting
+    name: Flake8 Linting & Ruff Formatting
     runs-on: ubuntu-latest
 
     steps:
@@ -28,7 +28,7 @@ jobs:
         run: |
           pip install ruff flake8
 
-      - name: Run Black & Pylint
+      - name: Run Ruff & Flake8
         if: steps.changed-files.outputs.any_changed == 'true'
         run: |
           changed_files=(${{steps.changed-files.outputs.all_changed_files}})
