updated YAML to address a ticket

--- a/.doc_gen/metadata/personalize-events_metadata.yaml
+++ b/.doc_gen/metadata/personalize-events_metadata.yaml
@@ -8,7 +8,7 @@ personalize-events_PutEvents:
           excerpts:
             - description:
               snippet_tags:
-                - personalize.java2.put_items.main
+                - personalize.java2.put_events.main
     JavaScript:
       versions:
         - sdk_version: 3
