--- a/.github/workflows/validate-doc-metadata.yml
+++ b/.github/workflows/validate-doc-metadata.yml
@@ -16,7 +16,7 @@ jobs:
       - name: checkout repo content
         uses: actions/checkout@v4
       - name: validate metadata
-        uses: awsdocs/aws-doc-sdk-examples-tools@2024-09-04-A
+        uses: awsdocs/aws-doc-sdk-examples-tools@7a910666161eef031c050cdc3083ab824c322dcb
         with:
           doc_gen_only: "False"
           strict_titles: "True"
