--- a/javav2/example_code/opensearch/pom.xml
+++ b/javav2/example_code/opensearch/pom.xml
@@ -35,7 +35,7 @@
             <dependency>
                 <groupId>software.amazon.awssdk</groupId>
                 <artifactId>bom</artifactId>
-                <version>2.21.20</version>
+                <version>2.27.22</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -84,6 +84,14 @@
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>netty-nio-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>sso</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>ssooidc</artifactId>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
