Weathertop: Pause JSV3 runs

--- a/javascriptv3/Dockerfile
+++ b/javascriptv3/Dockerfile
@@ -1,25 +1,27 @@
 # syntax=docker/dockerfile:1
 FROM node:20
 
-# Update image
-RUN apt-get update && \
-    apt-get upgrade -y && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+CMD exit 0
 
-# Copy source code
-COPY ./javascriptv3 /javascriptv3
+# # Update image
+# RUN apt-get update && \
+#     apt-get upgrade -y && \
+#     apt-get clean && \
+#     rm -rf /var/lib/apt/lists/*
 
-# Set non-root user
-RUN useradd -m automation && \
-    chown -R automation:automation /javascriptv3
-USER automation:automation
+# # Copy source code
+# COPY ./javascriptv3 /javascriptv3
 
-# Copy resources
-COPY --chown=automation:automation ./resources /resources
-COPY --chown=automation:automation ./python/example_code/glue/flight_etl_job_script.py /python/example_code/glue/flight_etl_job_script.py
-COPY --chown=automation:automation ./workflows /workflows
+# # Set non-root user
+# RUN useradd -m automation && \
+#     chown -R automation:automation /javascriptv3
+# USER automation:automation
 
-# Set default command
-# `npm i` needs to be run in the container. Otherwise it causes a dependency issue: https://github.com/evanw/esbuild/issues/1646#issuecomment-1238080595
-CMD npm i --prefix /javascriptv3 && npm run --prefix /javascriptv3 integration-test
+# # Copy resources
+# COPY --chown=automation:automation ./resources /resources
+# COPY --chown=automation:automation ./python/example_code/glue/flight_etl_job_script.py /python/example_code/glue/flight_etl_job_script.py
+# COPY --chown=automation:automation ./workflows /workflows
+
+# # Set default command
+# # `npm i` needs to be run in the container. Otherwise it causes a dependency issue: https://github.com/evanw/esbuild/issues/1646#issuecomment-1238080595
+# CMD npm i --prefix /javascriptv3 && npm run --prefix /javascriptv3 integration-test
