Add KmsMasterKeyId to the SNS topic.

--- a/workflows/eventbridge_scheduler/resources/cfn_template.yaml
+++ b/workflows/eventbridge_scheduler/resources/cfn_template.yaml
@@ -6,6 +6,8 @@ Parameters:
 Resources:
   SchedulerSnsTopic:
     Type: AWS::SNS::Topic
+    Properties:
+      KmsMasterKeyId: alias/aws/sns
 
   MySubscription:
     Type: AWS::SNS::Subscription
