--- a/dotnetv3/EC2/VirtualPrivateCloudExamples/CreateVPCTests/testsettings.json
+++ b/dotnetv3/EC2/VirtualPrivateCloudExamples/CreateVPCTests/testsettings.json
@@ -1,5 +1,5 @@
 {
-  "BucketName": "DOC-EXAMPLE-BUCKET1",
+  "BucketName": "amzn-s3-demo-bucket1",
   "VpcId": "vpc-1a2b3c4d",
   "SubnetId": "subnet-012345678912345606",
   "SecurityGroupId": "sg-012345678912345606",
